Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20584

Follow Symbol for virtual functions is semi-broken

    XMLWordPrintable

Details

    Description

      struct Base { virtual void func() {} };
      struct Derived : Base { void func() override {} };
      
      int main()
      {
          Base *b = new Derived;
          b->func(); // F2 here
          return 0;
      }

      It should show a popup with Base::func and Derived::func, but instead, it directly jumps to Base::func. On a larger scale project, it jumps to the definition of the base, and there it shows the popup...

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-20584
        # Subject Branch Project Status CR V

        Activity

          People

            yvvan Ivan Donchevskii
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes