src/plugins/cpptools/cppsymbolinfo.h
@@ -39,7 +39,7 @@ public:
     int endLine = 0;
     int endColumn = 0;
     QString fileName;
-    bool isPureDeclarationForUsage = false;
+    bool isResultOnlyForFallBack = false;
 };
 
 } // namespace CppTools
